<?php
use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    public function up(): void {
        Schema::create('ad_schedules', function (Blueprint $table) {
            $table->id('schedule_id');
            $table->foreignId('ad_id')->constrained('advertisements', 'ad_id')->cascadeOnDelete();
            $table->date('start_date');
            $table->date('end_date');
            $table->time('start_time')->nullable();
            $table->time('end_time')->nullable();
            $table->boolean('is_active')->default(true);
        });
    }
    public function down(): void {
        Schema::dropIfExists('ad_schedules');
    }
};